--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
-p {background-color: red; }
+h1 {
+	color: blue; 
+}
+
+h2 {
+	color: brown;
+}
+
+li {
+	color: violet;
+}
+
+#punainen-kohta {
+	color: red;
+}
+
+p {
+	color: brown;
+}
