--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
+img {
+	margin: 0 auto;
+}
+
+body {
+	color: #555;
+	line-height: 1.5;
+	padding: 4em 1em;
+	font-family: 'Helvetica', 'Arial', sans-serif;
+	margin: 0 auto;
+	max-width: 50em;
+}
+
 h1 {
-	color: blue; 
+	margin-top: 1em;
+	padding-top: 1em;
+	color: #333;
 }
 
-h2 {
-	color: brown;
-}
-
-li {
-	color: violet;
-}
-
-#punainen-kohta {
-	color: red;
-}
-
-p {
-	color: brown;
+code {
+	padding: 2px 4px;
+	vertical-align: text-bottom;
+	background: #eee;
 }
